Fix header text overflow

--- a/src/modules/my/app/app.css
+++ b/src/modules/my/app/app.css
@@ -9,11 +9,7 @@
     font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
     color: white;
 }
-.header1 {
-    font-size: 3rem;
-    font-weight: 700;
-    font-family: 'Poppins';
-}
+
 .header2 {
     font-size: 20px;
     font-family: 'Playfair Display';
@@ -22,4 +18,20 @@
 
 .slds-context-bar {
     height: 3.5rem;
+}
+
+@media screen and (min-width: 601px) {
+    .header1 {
+        font-size: 3rem;
+        font-weight: 700;
+        font-family: 'Poppins';
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        font-family: 'Poppins';
+    }
 }
